--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ volumes:
 services:
 
   # container PHP
-  airbnbphp:
-    container_name: phpairbnb
+  airbebphp:
+    container_name: phpairbeb
     build: 
       context: ./php
     ports:
@@ -17,11 +17,11 @@ services:
     volumes:
       - ./app:/var/www/symfo
     depends_on:
-      - airbnbbase
+      - airbebbase
 
   # container nginx
-  airbnbnginx:
-    container_name: nginxairbnb
+  airbebnginx:
+    container_name: nginxairbeb
     image: nginx:stable-alpine
     ports:
       - '80:80'
@@ -32,30 +32,30 @@ services:
       - ./app:/var/www/symfo
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - airbnbphp
-      - airbnbbase
-      - airbnbnode
+      - airbebphp
+      - airbebbase
+      - airbebnode
 
   # container de bdd en MARIADB
-  airbnbbase:
-    container_name: baseairbnb
+  airbebbase:
+    container_name: baseairbeb
     image: mariadb:latest
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       TZ: UTC
       MYSQL_ROOT_PASSWORD: admin2024
-      MYSQL_DATABASE: airbnbdata
-      MYSQL_USER: airbnbuser
-      MYSQL_PASSWORD: airbnb2024
+      MYSQL_DATABASE: airbebdata
+      MYSQL_USER: airbebuser
+      MYSQL_PASSWORD: airbeb2024
     ports:
       - '3307:3306'
     volumes:
       - maria:/var/lib/mysql
 
   # container NODEJS
-  airbnbnode:
-    container_name: nodeairbnb
+  airbebnode:
+    container_name: nodeairbeb
     build: 
       context: ./node
     volumes:
@@ -64,5 +64,5 @@ services:
     environment:
       TZ: UTC
     depends_on:
-      - airbnbphp
+      - airbebphp
     tty: true
