modifying REgistration and Auth/repo/methods/controller

--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -16,6 +16,7 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            entry_point: App\Security\UserAuthenticator
             form_login:
                 login_path: app_login
                 check_path: app_login
@@ -24,6 +25,13 @@ security:
             logout:
                 path: app_logout
                 target: /accueil
+            custom_authenticator: App\Security\UserAuthenticator
+
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                always_remember_me: true
                 # where to redirect after logout
                 # target: app_any_route
 
