--- a/app/config/packages/vich_uploader.yaml
+++ b/app/config/packages/vich_uploader.yaml
@@ -1,8 +1,12 @@
 vich_uploader:
     db_driver: orm
-
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
-    #        namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+ 
+    metadata:
+        type: attribute
+ 
+    mappings:
+        house:
+           uri_prefix: /images/uploads
+           upload_destination: '%kernel.project_dir%/public/images/uploads'
+           namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+           
