--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -1,4 +1,8 @@
 security:
+
+    role_hierarchy:
+        ROLE_AUTHOR: ROLE_USER
+        ROLE_ADMIN: [ROLE_USER,ROLE_AUTHOR]
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
@@ -37,6 +41,7 @@ security:
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
+
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
