--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -50,6 +50,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/annonce/new, roles: [ROLE_ADMIN, ROLE_AUTHOR]}
+         - { path: '^/annonce/\d+/edit', roles: [ROLE_ADMIN, ROLE_AUTHOR] }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
